# gemini-ng

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gemini_ng/: __init__.py  chat.py  client.py
src/gemini_ng/schemas/: __init__.py  base.py  harm.py  part.py  proxy.py  request.py  response.py  upload.py
src/gemini_ng/utils/: cache.py  error.py  video.py
